force-app/main/default/objects/ssot__AcademicCredential__dlm/fields/ssot__IssuerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssuerId__c</fullName>
    <label>Issuer</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssuerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>