force-app/main/default/objects/ssot__AcademicCredential__dlm/fields/ssot__rel_1719817644970_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817644970_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicCredential_IssuerId_map_Acco_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>AcademicCredential_IssuerId_map_Acco_rel</relationshipLabel>
    <relationshipName>rel_1719817644970_end</relationshipName>
    <type>Lookup</type>
</CustomField>